作品Plan数据库表CRUD
