# internal/server/grpc.go
@@ -15,7 +15,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.FilmclipService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, filmclip *service.FilmclipService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -37,6 +37,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.FilmclipService, logger log.
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterFilmclipServer(srv, greeter)
+	v1.RegisterFilmclipServer(srv, filmclip)
 	return srv
 }
